--- a/css/contact.css
+++ b/css/contact.css
@@ -68,3 +68,23 @@ h3{
    
     
 } 
+
+@media screen and (max-width: 991px) {
+    .navbar .container-lg,
+     .navbar-brand
+     {
+         display: block;
+     }
+     .navbar{
+         padding: 0px;
+     }
+     .navbar-brand{
+         margin-right: -1rem;
+         margin-left: -1rem;
+     }
+     .navbar-nav{
+         flex-direction: row;
+         justify-content: center;
+         padding: 5px;
+     }
+    }
