--- a/css/style.css
+++ b/css/style.css
@@ -44,23 +44,31 @@ main .conatiner {
 
 .float-left {
     margin-right: 20px;
-    width: 600px;
     height: 400px;
 }
 
 h3 {
     color: rgb(62, 172, 172);
-    ;
+    
 }
 /**Footer CSS style**/
 .footer {
-    background-color: grey;
+    background-color:transparent;
     border-top: rgb(62, 172, 172) 5px solid;
     text-align: center;
     padding-top: 25px;
     padding-bottom: 5px;
     color: black;
+    height: ;
 }
+a{
+    margin-right: 5px;
+    color: black;
+}
+
+a:hover {
+    color: rgb(62, 172, 172);
+  }
 
 /**media query**/
 
@@ -82,8 +90,6 @@ h3 {
        justify-content: center;
        padding: 5px;
    }
-   .float-left{
-       width: 100%;
-   }
    
 }
+
